--- a/src/css/userProfile.css
+++ b/src/css/userProfile.css
@@ -1,3 +1,7 @@
+*{margin:0; padding: 0; box-sizing: border-box;}
+ul, ol, li{list-style:none;}
+a{text-decoration:none;} 
+
 .userProfile {
   background-color: #ffffff;
   display: flex;
