--- a/src/css/productEdit.css
+++ b/src/css/productEdit.css
@@ -51,8 +51,13 @@
   background-color: #eee;
 }
 
+.productEdit .inner .wrap.stock {
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
 .productEdit .inner .wrap.stock .boxWrap {
   justify-content: space-between;
+  margin: 0 0 10px 0;
 }
 .productEdit .inner .wrap.stock .boxWrap .box {
   margin: 0 10px;
@@ -60,6 +65,7 @@
   height: 50px;
   background-color: #fff;
 }
+
 .productEdit .inner .wrap.stock select {
   margin: 0 10px;
   width: 100%;
@@ -74,6 +80,14 @@
 }
 .productEdit .inner .wrap.stock label {
   font-size: 32px;
+}
+.productEdit .inner .wrap.stock .title .btn {
+  padding: 10px 15px; margin-left: 20px;
+  background-color: #eee;
+}
+.productEdit .inner .wrap.stock .btn {
+  padding: 10px 15px;
+  background-color: #eee;
 }
 .productEdit .inner .wrap.img {
   justify-content: flex-start;
