--- a/src/css/passwordCheck.css
+++ b/src/css/passwordCheck.css
@@ -13,131 +13,127 @@ a{text-decoration:none;}
 }
 
 .passwordCheck .div {
-  background-color: #ffffff;
-  height: 1024px;
+  background-color: #fffcf7;
+  height: 524px;
   position: relative;
-  width: 1440px;
+  width: 640px;
+  border-radius: 10px;
+}
+
+.passwordCheck .div > .textWrapper::after{
+  content: '';
+  display: block;
+  width: 540px;
+  border: 1px solid #f6f1eb;
+  position: absolute;
+  top: 60px;
+  left: 120px;
 }
 
 .passwordCheck .textWrapper {
-  color: #000000;
+  color: #524747;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 35.5px;
+  font-size: 30px;
   font-weight: 400;
-  height: 89px;
-  left: 506px;
+  height: 95px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 47px;
-  width: 427px;
+  top: 20px;
+  left: -70px;
+  width: 413px;
 }
 
 .passwordCheck .loginBox {
-  background-color: #eeeeee;
-  height: 650px;
-  left: 226px;
+  background-color: #fffcf7;
+  height: 373px;
+  left: 0px;
   position: absolute;
-  top: 169px;
-  width: 1000px;
+  top: 100px;
+  width: 408px;
 }
 
 .passwordCheck .buttonBox {
-  background-color: #ffffff;
-  height: 189px;
-  left: 12px;
+  background-color: #fffcf7;
+  height: 154px;
+  left: 10px;
   position: absolute;
-  top: 447px;
-  width: 960px;
+  top: 200px;
+  width: 400px;
 }
 
 .passwordCheck .submitButton {
-  background-color: #eeeeee;
-  height: 110px;
-  left: 55px;
+  background-color: #4d4a4a;
+  height: 40px;
+  left: 150px;
   position: absolute;
-  top: 35px;
-  width: 330px;
+  top: 28px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  line-height: 20px;
+  font-size: 18px;
 }
 
-.passwordCheck .textWrapper2 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 32.5px;
-  font-weight: 400;
-  height: 68px;
-  left: 79px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 20px;
-  width: 158px;
-}
 
 .passwordCheck .cancelButton {
-  background-color: #eeeeee;
-  height: 110px;
-  left: 602px;
+  background-color: #4d4a4a;
+  height: 40px;
+  left: 350px;
   position: absolute;
-  top: 35px;
-  width: 271px;
+  top: 28px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  line-height: 20px;
+  font-size: 18px;
 }
 
-.passwordCheck .textWrapper3 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 32.5px;
-  font-weight: 400;
-  height: 68px;
-  left: 37px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 20px;
-  width: 200px;
-}
 
 .passwordCheck .inputBox {
-  background-color: #ffffff;
-  height: 341px;
-  left: 16px;
+  background-color: #fffcf7;
+  height: 178px;
+  left: 110px;
   position: absolute;
-  top: 85px;
-  width: 957px;
+  top: 10px;
+  width: 402px;
 }
 
 .passwordCheck .inputUserpassword {
-  background-color: #eeeeee;
-  height: 110px;
-  left: 33px;
+  background-color: #fffcf7;
+  height: 90px;
+  left: -70px;
   position: absolute;
-  top: 43px;
-  width: 891px;
+  top: 24px;
+  width: 400px;
 }
 
 .passwordCheck .textWrapper4 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 32.5px;
+  font-size: 15px;
   font-weight: 400;
-  height: 69px;
-  left: 130px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 626px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
 .passwordCheck .divWrapper {
-  background-color: #eeeeee;
-  height: 110px;
-  left: 33px;
+  background-color: #fffcf7;
+  height: 70px;
+  left: -70px;
   position: absolute;
-  top: 197px;
-  width: 891px;
+  top: 100px;
+  width: 400px;
 }
