--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,34 @@
-@font-face {
+/* @font-face {
     font-family: 'Pretendard-Regular';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+ul,
+li,
+ol {
+  list-style: none;
 }
 
-*{margin: 0; padding: 0; box-sizing: border-box; font-family: Pretendard-Regular;}
-ul,li,ol{list-style: none;}
-
-.inner{
-    padding: 0 120px;
+.inner {
+  padding: 0 120px;
 }
 
-.link{
-    text-decoration: none;
+.link {
+  text-decoration: none;
+}
+
+button {
+  background-color: inherit;
+  border: none;
 }
