--- a/src/main.css
+++ b/src/main.css
@@ -3,10 +3,38 @@
 }
 
 .main .visual {
+  display: flex;
+  position: relative;
   width: 100vw;
   height: 600px;
-  margin: 20px 0;
   background-color: #eeeeee;
+  overflow: hidden;
+}
+
+.main .visual .wrap {
+  min-width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.main .visual img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.main .visual button {
+  padding: 10px;
+  border-radius: 20px;
+}
+.main .visual button.left {
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+.main .visual button.right {
+  position: absolute;
+  top: 50%;
+  right: 20px;
 }
 
 .main .wrap {
@@ -19,6 +47,6 @@
   margin: 0 5px;
 }
 
-.main .wrap .link{
+.main .wrap .link {
   max-width: 300px;
 }
