--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -25,7 +25,7 @@ a {
 
 .payment .payBox {
   background-color: #ffffff;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #ff7d9e;
   height: 915px;
   left: 10px;
   position: absolute;
@@ -214,14 +214,6 @@ a {
   top: 465px;
   width: 100%;
   border-radius: 10px;
-}
-
-.payment .howPayBox::after {
-  position: absolute;
-  left: 420px;
-  content: "|";
-  color: #ff7d9e;
-  height: 100%;
 }
 
 .payment .title {
@@ -529,7 +521,6 @@ a {
   line-height: normal;
   position: absolute;
   top: 60px;
-  
 }
 
 .payment .buttonBox {
