--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,8 @@
   font-style: normal;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Pretendard-Regular";
-  /* font-family: "Noto Sans KR", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal; */
-}
-ul,
-li,
-ol {
+* {  margin: 0;  padding: 0;  box-sizing: border-box;  font-family: "Pretendard-Regular";}
+ul,li,ol {
   list-style: none;
 }
 
