payment에서 payBuyList로 item전달코드 구현 완료/review 버튼 컴포넌트 구현완료/css 수정예정

--- a/src/css/review.css
+++ b/src/css/review.css
@@ -1,3 +1,13 @@
+.selected {
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+}
+
+.non-selected {
+  background-color: gray;
+}
+
 .review {
   background-color: #ffffff;
   display: flex;
