--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -9,6 +9,7 @@
 .productList .inner .addBtnForm button{
   width: 100px; height: 50px; padding: 10px;
   border-radius: 20px;
+  box-shadow: 2px 2px gray;
   background-color: #ffffff;
   cursor: pointer;
 }
