--- a/src/css/paySuccess.css
+++ b/src/css/paySuccess.css
@@ -71,7 +71,6 @@
 }
 
 .paySuccess .payInfo {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
   font-size: 30px;
   font-weight: 600;
@@ -81,9 +80,8 @@
 }
 
 .paySuccess .productName {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 400;
   left: 55px;
   letter-spacing: 0;
@@ -94,26 +92,22 @@
 }
 
 .paySuccess .howToPay {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 400;
   left: 55px;
-  letter-spacing: 0;
-  line-height: normal;
+
   position: absolute;
   text-align: center;
   top: 560px;
 }
 
 .paySuccess .howToPayPrint {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 400;
   left: 256px;
-  letter-spacing: 0;
-  line-height: normal;
+
   position: absolute;
   text-align: center;
   top: 560px;
@@ -135,8 +129,8 @@
 .paySuccess .paySumText {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 30px;
-  font-weight: 400;
+  font-size: 24px;
+  font-weight: 600;
   left: 55px;
   letter-spacing: 0;
   line-height: normal;
@@ -145,86 +139,50 @@
   top: 640px;
 }
 
-.paySuccess .orderProduct1 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 28px;
-  font-weight: 400;
-  left: 256px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 170px;
+/* .paidItemList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.paySuccess .orderProduct2 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 28px;
-  font-weight: 400;
-  left: 256px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 300px;
+.paidItemList .p1,
+.paidItemList .p2,
+.paidItemList .p3 {
+  margin-right: 20px;
 }
 
-.paySuccess .orderProduct3 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 28px;
-  font-weight: 400;
-  left: 256px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 420px;
+.paidItemList img {
+  display: block;
+} */
+
+.paySuccessItemList {
+  display: flex; 
+  flex-wrap: wrap;
 }
 
-.paySuccess .optionInfo1 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 25px;
-  font-weight: 400;
-  left: 268px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 230px;
+.paidItem {
+  flex: 0 0 calc(33.33% - 20px); /* 한 줄에 세 개의 요소가 들어가도록 설정. 여백 포함하여 총 너비의 33.33%로 설정. */
+  margin-right: 20px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
-.paySuccess .optionInfo2 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 25px;
-  font-weight: 400;
-  left: 268px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 360px;
+.paidItem:last-child {
+  margin-right: 0;
 }
 
-.paySuccess .optionInfo3 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 25px;
-  font-weight: 400;
-  left: 268px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 480px;
+.pname {
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 18px;
+}
+
+.poption {
+  color: #9e9e9e;
 }
 
 .paySuccess .readMe {
-  color: #00000070;
   font-family: "Inter-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
@@ -232,30 +190,6 @@
   top: 720px;
   left: 200px;
 }
-
-/* .paySuccess .toHome {
-  background-color: #eeeeee;
-  font-size: 30px;
-  height: 80px;
-  left: 180px;
-  text-align: center;
-  position: absolute;
-  padding-top: 25px;
-  top: 1230px;
-  width: 300px;
-}
-
-.paySuccess .nextPage {
-  background-color: #eeeeee;
-  font-size: 30px;
-  height: 80px;
-  left: 580px;
-  text-align: center;
-  position: absolute;
-  padding-top: 25px;
-  top: 1230px;
-  width: 300px;
-} */
 
 /* button */
 .paySuccess .buttonGroup {
