--- a/src/css/payFail.css
+++ b/src/css/payFail.css
@@ -1,4 +1,4 @@
-.payFail {
+.paySuccess {
   background-color: #ffffff;
   display: flex;
   flex-direction: row;
@@ -6,14 +6,14 @@
   width: 100%;
 }
 
-.payFail .div {
+.paySuccess .div {
   background-color: #ffffff;
   height: 1500px;
   position: relative;
   width: 1440px;
 }
 
-.payFail .overlap {
+.paySuccess .overlap {
   height: 1172px;
   left: 193px;
   position: absolute;
@@ -21,16 +21,12 @@
   width: 1060px;
 }
 
-.payFail .innerBox {
-  background-color: #eeeeee;
+.paySuccess .innerBox {
   height: 1172px;
-  left: 0;
-  position: absolute;
-  top: 0;
   width: 1060px;
 }
 
-.payFail .overlapGroup {
+.paySuccess .overlapGroup {
   height: 97px;
   left: 36px;
   position: absolute;
@@ -38,259 +34,193 @@
   width: 945px;
 }
 
-.payFail .price {
-  background-color: #ffffff;
-  height: 98px;
+.paySuccess .price {
+  background-color: #ff7d9e;
+  border-radius: 10px;
+  height: 97px;
   left: 20px;
   position: absolute;
   top: 0;
-  width: 932px;
+  width: 950px;
 }
 
-.payFail .textWrapper {
-  color: #aa0000;
+.paySuccess .successMessage {
+  color: #fff;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.7px;
+  font-size: 30px;
   font-weight: 400;
-  left: 0;
+  left: 30px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 22px;
-  width: 952px;
+  top: 28px;
+  width: 945px;
 }
 
-.payFail .overlapGroup2 {
+.paySuccess .orderInfo {
   background-color: #ffffff;
-  height: 925px;
-  left: 57px;
-  position: absolute;
-  top: 192px;
-  width: 932px;
-}
-
-.payFail .textWrapper2 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 44.7px;
-  font-weight: 400;
-  left: 383px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 39px;
-}
-
-.payFail .textWrapper3 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 56px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 190px;
-}
-
-.payFail .textWrapper4 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 56px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 663px;
-}
-
-.payFail .textWrapper5 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 258px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 663px;
-}
-
-.payFail .textWrapper6 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 258px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 745px;
-}
-
-.payFail .textWrapper7 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 56px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 745px;
-}
-
-.payFail .textWrapper8 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 258px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 190px;
-}
-
-.payFail .textWrapper9 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 258px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 346px;
-}
-
-.payFail .textWrapper10 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 37.2px;
-  font-weight: 400;
-  left: 258px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 503px;
-}
-
-.payFail .p {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 33.5px;
-  font-weight: 400;
-  left: 270px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 253px;
-}
-
-.payFail .textWrapper11 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
-  font-weight: 400;
-  left: 46px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 865px;
-}
-
-.payFail .textWrapper12 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 33.5px;
-  font-weight: 400;
-  left: 270px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 410px;
-}
-
-.payFail .textWrapper13 {
-  color: #00000070;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 33.5px;
-  font-weight: 400;
-  left: 270px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 566px;
-}
-
-.payFail .vector {
-  height: 4px;
+  border: 5px dashed #ff7d9e;
+  border-radius: 10px;
+  height: 918px;
   left: 56px;
   position: absolute;
-  top: 324px;
-  width: 933px;
+  top: 191px;
+  width: 950px;
 }
 
-.payFail .img {
-  height: 2px;
-  left: 57px;
+.paySuccess .payInfo {
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.paySuccess .productName {
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 24px;
+  font-weight: 400;
+  left: 55px;
+  letter-spacing: 0;
+  line-height: normal;
   position: absolute;
-  top: 1038px;
-  width: 931px;
+  text-align: center;
+  top: 170px;
 }
 
-.payFail .divWrapper {
-  background-color: #eeeeee;
-  height: 80px;
-  left: 348px;
+.paySuccess .howToPay {
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 24px;
+  font-weight: 400;
+  left: 55px;
+
+  position: absolute;
   text-align: center;
+  top: 560px;
+}
+
+.paySuccess .howToPayPrint {
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 24px;
+  font-weight: 400;
+  left: 256px;
+
+  position: absolute;
+  text-align: center;
+  top: 560px;
+}
+
+.paySuccess .paySum {
+  color: #ff7d9e;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 28px;
+  font-weight: 600;
+  left: 256px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 640px;
+}
+
+.paySuccess .paySumText {
+  color: #000000;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 24px;
+  font-weight: 600;
+  left: 55px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 640px;
+}
+
+.paySuccess .row {
+  /* 1개만 나옴 */
+  margin-left: 45px;
+  padding: 50px;
   overflow: hidden;
-  position: absolute;
-  padding-top: 15px;
-  top: 1348px;
-  width: 345px;
-  font-size: 35px;
+  white-space: normal;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  word-break: keep-all;
 }
 
-.payFail .innerBox2 {
-  background-color: #eeeeee;
-  height: 80px;
-  left: 762px;
-  position: absolute;
-  padding-top: 15px;
-  top: 1348px;
-  width: 345px;
-  font-size: 35px;
-  text-align: center;
+.paidItem {
+  flex: 0 0 calc(33.33% - 20px); /* 한 줄에 세 개의 요소가 들어가도록 설정. 여백 포함하여 총 너비의 33.33%로 설정. */
+  margin-right: 10px;
+  margin-bottom: 80px;
+  box-sizing: border-box;
 }
 
-.payFail .textWrapper15 {
+.paidItem::after {
+  content: "결제완료";
+  color: tomato;
+  font-weight: 600;
+}
+
+.paidItem:last-child {
+  margin-right: 0;
+}
+
+.pname {
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-size: 18px;
+}
+
+.poption {
+  color: #9e9e9e;
+}
+
+.paySuccess .readMe {
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 20px;
+  font-weight: 400;
+  position: absolute;
+  top: 720px;
+  left: 200px;
+}
+
+/* button */
+.paySuccess .buttonGroup {
+  width: 600px;
+  border: none;
+  margin: 700px auto 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.paySuccess .button {
+  background-color: #eeeeeeee;
+  height: 70px;
+  width: 250px;
+  border: none;
+  position: relative;
+}
+
+.paySuccess .buttonText {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.7px;
-  font-weight: 400;
-  height: 90px;
-  left: 31px;
+  font-size: 22px;
+  font-weight: 600;
+  left: 50px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 7px;
-  width: 284px;
+  top: 20px;
+  white-space: nowrap;
+  width: 150px;
+  border: none;
+}
+
+.paySuccess .buttonBox {
+  position: absolute;
+  top: 750px;
+  left: -40px;
 }
