login input 태그 기능 추가

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -72,6 +72,18 @@ a{text-decoration:none;}
   width: 400px;
 }
 
+.login .place1{
+  position: absolute;
+  top: 2px;
+  left: 100px;
+  z-index:-1;
+  width: 50px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+}
+
 .login .textWrapper2 {
   color: #000000;
   
