--- a/src/css/findId.css
+++ b/src/css/findId.css
@@ -71,6 +71,51 @@ a{text-decoration:none;}
   width: 400px;
 }
 
+.findId .place1{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 100px;
+  width: 50px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
+.findId .place2{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 103px;
+  width: 60px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
+.findId .place3{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 103px;
+  width: 60px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
 .findId .textWrapper2 {
   color: #000000;
   font-size: 15px;
@@ -199,9 +244,10 @@ a{text-decoration:none;}
 }
 
 
-.result {
+.findId .result {
   position: absolute;
   top: 470px;
   left: 260px;
   color: #9d2a1e;
 }
+
