--- a/src/css/findPassword.css
+++ b/src/css/findPassword.css
@@ -63,6 +63,51 @@ a{text-decoration:none;}
   width: 402px;
 }
 
+.findPassword .place1{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 104px;
+  width: 50px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
+.findPassword .place2{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 103px;
+  width: 60px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
+.findPassword .place3{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 103px;
+  width: 60px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
 .findPassword .inputUserid {
   background-color: #fffcf7;
   height: 90px;
