--- a/src/css/passwordCheck.css
+++ b/src/css/passwordCheck.css
@@ -54,6 +54,36 @@ a{text-decoration:none;}
   width: 408px;
 }
 
+.passwordCheck .place1{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 100px;
+  width: 60px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
+.passwordCheck .place2{
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  left: 103px;
+  width: 80px;
+  text-align: center;
+  background-color: white;
+  color: #999999;
+  font-size: 14px;
+  transition: 0.1s;
+  border-radius: 15px;
+  cursor: text;
+}
+
 .passwordCheck .buttonBox {
   background-color: #fffcf7;
   height: 154px;
